HelloUltraviolet/Fixtures/RejectedSource/FFI/ForeignPostconditionPredicateBindings/Expected.uv
//! Expected diagnostic metadata for the ForeignPostconditionPredicateBindings rejected-source specimen.

expectedDiagnostic("E-SEM-2852", "requirement.23.ForeignPostconditionPredicateBindings")
